Updated icons in webgui and install some binaries to bin not sbin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -418,14 +418,30 @@ target_link_libraries(pilight-uuid ${CMAKE_DL_LIBS})
 target_link_libraries(pilight-uuid m)
 target_link_libraries(pilight-uuid ${CMAKE_THREAD_LIBS_INIT})
 
+if(EXISTS "/usr/local/sbin/pilight-send")
+	execute_process(COMMAND rm "/usr/local/sbin/pilight-send")
+endif()
+
+if(EXISTS "/usr/local/sbin/pilight-receive")
+	execute_process(COMMAND rm "/usr/local/sbin/pilight-receive")
+endif()
+
+if(EXISTS "/usr/local/sbin/pilight-control")
+	execute_process(COMMAND rm "/usr/local/sbin/pilight-control")
+endif()
+
+if(EXISTS "/usr/local/sbin/pilight-uuid")
+	execute_process(COMMAND rm "/usr/local/sbin/pilight-uuid")
+endif()
+
 install(PROGRAMS pilight-daemon DESTINATION sbin)
 install(PROGRAMS pilight-raw DESTINATION sbin)
-install(PROGRAMS pilight-send DESTINATION sbin)
-install(PROGRAMS pilight-control DESTINATION sbin)
+install(PROGRAMS pilight-send DESTINATION bin)
+install(PROGRAMS pilight-control DESTINATION bin)
 install(PROGRAMS pilight-learn DESTINATION sbin)
-install(PROGRAMS pilight-receive DESTINATION sbin)
+install(PROGRAMS pilight-receive DESTINATION bin)
 install(PROGRAMS pilight-debug DESTINATION sbin)
-install(PROGRAMS pilight-uuid DESTINATION sbin)
+install(PROGRAMS pilight-uuid DESTINATION bin)
 install(SCRIPT cmake_postinstall.cmake)
 
 WRITE_UNINSTALL_TARGET_SCRIPT()
