Added the program switching protocol

--- a/pilight.h.in
+++ b/pilight.h.in
@@ -62,6 +62,7 @@
 #cmakedefine PROTOCOL_NEXA_SWITCH
 #cmakedefine PROTOCOL_OPENWEATHERMAP
 #cmakedefine PROTOCOL_POLLIN_SWITCH
+#cmakedefine PROTOCOL_PROGRAM
 #cmakedefine PROTOCOL_RAW
 #cmakedefine PROTOCOL_RELAY
 #cmakedefine PROTOCOL_REV
