--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -360,6 +360,11 @@ set_source_files_properties(${avrdude_sources} PROPERTIES COMPILE_FLAGS " -w ")
 install(FILES libpilight.so DESTINATION lib/pilight/ RENAME libpilight.so.3)
 install(FILES libpilight.a DESTINATION lib/pilight/ RENAME libpilight.a)
 
+if(EXISTS "/usr/local/lib/libpilight.so")
+	execute_process(COMMAND rm "/usr/local/lib/libpilight.so")
+	execute_process(COMMAND ln -s "/usr/local/lib/pilight/libpilight.so.3" "/usr/local/lib/libpilight.so")
+endif()
+
 if(${WEBSERVER} MATCHES "ON")
 	install(DIRECTORY web/ DESTINATION /usr/local/share/pilight)
 endif()
