Let pilight work the JSON double instead of integer

--- a/pilight.h.in
+++ b/pilight.h.in
@@ -84,6 +84,7 @@
 
 #define VERSION					"3.0"
 #define PULSE_DIV				34
+#define EPSILON					0.00001
 
 #ifdef WEBSERVER
 	#define WEBSERVER_PORT			5001
