--- a/pilight.h.in
+++ b/pilight.h.in
@@ -47,6 +47,7 @@
 #cmakedefine PROTOCOL_GENERIC_DIMMER
 #cmakedefine PROTOCOL_GENERIC_SWITCH
 #cmakedefine PROTOCOL_GENERIC_WEATHER
+#cmakedefine PROTOCOL_GENERIC_WEBCAM
 #cmakedefine PROTOCOL_HOMEEASY_OLD
 #cmakedefine PROTOCOL_IMPULS
 #cmakedefine PROTOCOL_INTERTECHNO_SWITCH
