Add support for the Globaltronics (ALDI) QUIGG/GT-7000 remote controller
This commit adds protocol support for the GT-7000 found in the remote controls
sold in Germany by ALDI.

--- a/pilight.h.in
+++ b/pilight.h.in
@@ -66,6 +66,7 @@
 #cmakedefine PROTOCOL_OPENWEATHERMAP
 #cmakedefine PROTOCOL_POLLIN_SWITCH
 #cmakedefine PROTOCOL_PROGRAM
+#cmakedefine PROTOCOL_QUIGG_SWITCH
 #cmakedefine PROTOCOL_RAW
 #cmakedefine PROTOCOL_RELAY
 #cmakedefine PROTOCOL_REV
