New protocol and some important fixes
- Added Old REV switches support (thanks to @easy12)
- The GC library and thread library have been slightly
changed to be thread safe again.
- In the receive thread, the sleep has been replaced by
thread safe mutexes and conditions.
- Fixed bug in node mode. Received codes from nodes
were not processed correctly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,11 +18,11 @@ if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "armv6")
 endif()
 
 if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "x86_64")
-	set(CMAKE_C_FLAGS "-Ofast -fPIC -march=native -mtune=native -ffast-math -Wconversion -Wunreachable-code -Wstrict-prototypes -Wfloat-equal -Wshadow -Wpointer-arith -Wcast-align -Wstrict-overflow=5 -Wwrite-strings -Waggregate-return -Wcast-qual -Wswitch-default -Wswitch-enum -Wformat=2 -g3 -rdynamic -Wall")
+	set(CMAKE_C_FLAGS "-Ofast -fPIC -march=native -mtune=native -ffast-math -Wconversion -Wunreachable-code -Wstrict-prototypes -Wfloat-equal -Wshadow -Wpointer-arith -Wcast-align -Wstrict-overflow=5 -Wwrite-strings -Waggregate-return -Wcast-qual -Wswitch-default -Wswitch-enum -Wformat=2 -g3 -Wall")
 	file(GLOB CMAKE_ZLIB_LIBS_INIT "/usr/lib/x86_64-linux-gnu/libz.so")
 endif()
 if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "amd64")
-	set(CMAKE_C_FLAGS "-O2 -fPIC -march=native -mtune=native -ffast-math -Wformat=2 -g3 -rdynamic -Wformat-nonliteral")
+	set(CMAKE_C_FLAGS "-O2 -fPIC -march=native -mtune=native -ffast-math -Wformat=2 -g3 -Wformat-nonliteral")
 	file(GLOB CMAKE_ZLIB_LIBS_INIT "/usr/lib32/libz.so")
 endif()
 
@@ -204,6 +204,11 @@ endif()
 if(${PROTOCOL_REV} MATCHES "OFF")
 	list(REMOVE_ITEM pilight_headers "${PROJECT_SOURCE_DIR}/libs/protocols/rev.h")
 	list(REMOVE_ITEM pilight "${PROJECT_SOURCE_DIR}/libs/protocols/rev.c")
+endif()
+
+if(${PROTOCOL_REV_OLD} MATCHES "OFF")
+	list(REMOVE_ITEM pilight_headers "${PROJECT_SOURCE_DIR}/libs/protocols/rev_old.h")
+	list(REMOVE_ITEM pilight "${PROJECT_SOURCE_DIR}/libs/protocols/rev_old.c")
 endif()
 
 if(${PROTOCOL_CLARUS} MATCHES "OFF")
