Added pilight-flash program to allow manual firmware flashing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -497,6 +497,12 @@ target_link_libraries(pilight-uuid ${CMAKE_DL_LIBS})
 target_link_libraries(pilight-uuid m)
 target_link_libraries(pilight-uuid ${CMAKE_THREAD_LIBS_INIT})
 
+add_executable(pilight-flash flash.c)
+target_link_libraries(pilight-flash pilight_shared)
+target_link_libraries(pilight-flash ${CMAKE_DL_LIBS})
+target_link_libraries(pilight-flash m)
+target_link_libraries(pilight-flash ${CMAKE_THREAD_LIBS_INIT})
+
 if(EXISTS "/usr/local/sbin/pilight-send")
 	execute_process(COMMAND rm "/usr/local/sbin/pilight-send")
 endif()
@@ -520,6 +526,7 @@ install(PROGRAMS pilight-control DESTINATION bin)
 install(PROGRAMS pilight-learn DESTINATION sbin)
 install(PROGRAMS pilight-receive DESTINATION bin)
 install(PROGRAMS pilight-debug DESTINATION sbin)
+install(PROGRAMS pilight-flash DESTINATION sbin)
 install(PROGRAMS pilight-uuid DESTINATION bin)
 install(SCRIPT cmake_postinstall.cmake)
 
