--- a/pilight.h.in
+++ b/pilight.h.in
@@ -38,6 +38,7 @@
 #cmakedefine PROTOCOL_COGEX_SWITCH
 #cmakedefine PROTOCOL_CONRAD_RSL_SWITCH
 #cmakedefine PROTOCOL_CONRAD_RSL_CONTACT
+#cmakedefine PROTOCOL_CONRAD_WEATHER
 #cmakedefine PROTOCOL_DATETIME
 #cmakedefine PROTOCOL_DS18B20
 #cmakedefine PROTOCOL_DS18S20
