--- a/pilight.h.in
+++ b/pilight.h.in
@@ -45,6 +45,8 @@
 #cmakedefine PROTOCOL_DHT11
 #cmakedefine PROTOCOL_DHT22
 #cmakedefine PROTOCOL_DIO_SWITCH
+#cmakedefine PROTOCOL_EHOME
+#cmakedefine PROTOCOL_ELRO_SWITCH
 #cmakedefine PROTOCOL_GENERIC_DIMMER
 #cmakedefine PROTOCOL_GENERIC_SWITCH
 #cmakedefine PROTOCOL_GENERIC_WEATHER
@@ -72,7 +74,6 @@
 #cmakedefine PROTOCOL_RELAY
 #cmakedefine PROTOCOL_REV
 #cmakedefine PROTOCOL_REV_OLD
-#cmakedefine PROTOCOL_ELRO_SWITCH
 #cmakedefine PROTOCOL_SELECTREMOTE
 #cmakedefine PROTOCOL_SILVERCREST
 #cmakedefine PROTOCOL_SUNRISESET
