This commit makes the protocol and hardware library totally modular
The core of pilight consists of protocol and hardware definitions.
The protocols add support for new devices, the hardware adds support
for different hardware interfaces / frequencies. The main "problem"
however was that the these modules were closely tied into pilight.
That meant that with each small update inside a module, pilight
hard to be fully recompiled. Also added new modules required
building the whole source before it could be used.

This commit makes all protocols and hardware independent from the
main pilight daemon. When pilight is started it dynamically loads
all protocols and hardware modules. So adding a new modules is
as simple as putting the new shared object of the module in the
appropriate folder and pilight will start using it when it
restarted. Just like the Apache and the mod_php module.
Before the module is loaded, pilight will check for compatibility.

Each protocol will soon be offered through the pilight
repositories.

What are all the benifits of this:
- It allows users to use newer modules with older versions (when of
course all functions inside the modules are supported by pilight).
- It allows users to install new modules without having to recompile.
- It allows upgrading modules without recompiling.
- It allows you to easily remove modules not used or which are bugging.
- It allows easier module development. A single module can just be
developed without constantly having to fully recompile pilight.

This feature also add two new settings:

"protocol-root": "/usr/local/lib/pilight/protocols",
"hardware-root": "/usr/local/lib/pilight/hardware"

Both paths are the default paths were the modules are placed.

--- a/Makefile.old
+++ b/Makefile.old
@@ -21,12 +21,14 @@ ifneq (, $(findstring amd64, $(SYS)))
 	OSFLAGS = -O3 -fPIC -march=native -mtune=native -mfpmath=sse -Wno-conversion
 endif
 GIT_HASH := $(shell git describe --always)
-CFLAGS = -ffast-math $(OSFLAGS) -Wl,-rpath=/usr/local/lib/,-rpath=/usr/lib/,-rpath=/lib/ -fstack-protector-all -Wfloat-equal -Wshadow -Wpointer-arith -Wcast-align -Wstrict-overflow=5 -Wwrite-strings -Waggregate-return -Wcast-qual -Wswitch-default -Wswitch-enum -Wformat=2 -g -Wall -I. -isystem.. -Ilibs/pilight/ -Ilibs/protocols/ -Ilibs/hardware/ -Ilibs/avrdude/ -pthread -lm -DHASH=\"$(GIT_HASH)\"
+CFLAGS = -ffast-math $(OSFLAGS) -Wl,-rpath=/usr/local/lib/,-rpath=/usr/lib/,-rpath=/lib/ -fstack-protector-all -Wfloat-equal -Wshadow -Wpointer-arith -Wcast-align -Wstrict-overflow=5 -Wwrite-strings -Waggregate-return -Wcast-qual -Wswitch-default -Wswitch-enum -Wformat=2 -g -Wall -I. -isystem.. -Ilibs/pilight/ -Ilibs/protocols/ -Ilibs/hardware/ -Ilibs/avrdude/ -pthread -lm -ldl -DHASH=\"$(GIT_HASH)\"
 SUBDIRS = libs/pilight libs/protocols libs/hardware libs/avrdude
 SRC = $(wildcard *.c)
-INCLUDES = $(wildcard protocols/*.h) $(wildcard protocols/*.c) $(wildcard hardware/*.h) $(wildcard hardware/*.c) $(wildcard libs/pilight/*.h) $(wildcard libs/pilight/*.c) $(wildcard libs/avrdude/*.h) $(wildcard libs/avrdude/*.c)
+INCLUDES = $(wildcard libs/pilight/*.h) $(wildcard libs/pilight/*.c) $(wildcard libs/avrdude/*.h) $(wildcard libs/avrdude/*.c)
 PROGAMS = $(patsubst %.c,pilight-%,$(SRC))
-LIBS = libs/pilight/pilight.o libs/protocols/protocols.o libs/hardware/hardware.o libs/avrdude/avrdude.o
+LIBS = libs/pilight/pilight.o libs/avrdude/avrdude.o
+PROTCOLS := $(shell cd libs/protocols/ && find * -name \*.so)
+HARDWARE := $(shell cd libs/hardware/ && find * -name \*.so)
 WEBFILES := $(shell cd web && find * -type f)
 WEBDIRS := $(shell cd web && find * -type d )
 
@@ -40,42 +42,44 @@ $(SUBDIRS):
 all: $(LIBS) libpilight.so libpilight.a $(PROGAMS) 
 
 libpilight.so: $(LIBS)
-	$(GCC) $(LIBS) -shared -o libpilight.so -lpthread -lm
+	$(GCC) $(LIBS) -shared -o libpilight.so -lpthread -lm -ldl
 	
 libpilight.a: $(LIBS)
 	$(CROSS_COMPILE)ar -rsc libpilight.a $(LIBS)
 
 pilight-daemon: daemon.c $(INCLUDES) $(LIBS) libpilight.so
-	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/libz.so
+	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/libz.so /usr/lib/arm-linux-gnueabihf/libdl.so
 
 pilight-send: send.c $(INCLUDES) $(LIBS) libpilight.so
-	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/libz.so
+	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/libz.so /usr/lib/arm-linux-gnueabihf/libdl.so
 
 pilight-receive: receive.c $(INCLUDES) $(LIBS) libpilight.so
-	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/libz.so
+	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/libz.so /usr/lib/arm-linux-gnueabihf/libdl.so
 
 pilight-debug: debug.c $(INCLUDES) $(LIBS) libpilight.so
-	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/libz.so
+	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/libz.so /usr/lib/arm-linux-gnueabihf/libdl.so
 
 pilight-learn: learn.c $(INCLUDES) $(LIBS) libpilight.so
-	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/libz.so
+	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/libz.so /usr/lib/arm-linux-gnueabihf/libdl.so
 
 pilight-control: control.c $(INCLUDES) $(LIBS) libpilight.so
-	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/libz.so
+	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/libz.so /usr/lib/arm-linux-gnueabihf/libdl.so
 
 pilight-raw: raw.c $(INCLUDES) $(LIBS) libpilight.so
-	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/libz.so
+	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/libz.so /usr/lib/arm-linux-gnueabihf/libdl.so
 	
 pilight-uuid: uuid.c $(INCLUDES) $(LIBS) libpilight.so
-	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/libz.so
+	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/libz.so /usr/lib/arm-linux-gnueabihf/libdl.so
 
 pilight-flash: flash.c $(INCLUDES) $(LIBS) libpilight.so
-	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/libz.so
+	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/libz.so /usr/lib/arm-linux-gnueabihf/libdl.so
 
 install:
 	[ -d /usr/share/images/pilight/ ] && rm -r /usr/share/images/pilight/ || true
 	
 	install -m 0755 -d /usr/local/lib/pilight/
+	install -m 0755 -d /usr/local/lib/pilight/protocols/
+	install -m 0755 -d /usr/local/lib/pilight/hardware/
 	install -m 0755 -d /usr/local/sbin
 	install -m 0755 -d /usr/local/bin
 	install -m 0755 -d /etc/pilight
@@ -97,6 +101,12 @@ install:
 	for f in $(WEBFILES) ; do \
 		cd web/ && install -D $$f /usr/local/share/pilight/`dirname $$f` || true && cd ..; \
 	done
+	for f in $(PROTCOLS) ; do \
+		cd libs/protocols/ && install -D $$f /usr/local/lib/pilight/protocols/ || true && cd .. && cd ..; \
+	done
+	for f in $(HARDWARE) ; do \
+		cd libs/hardware/ && install -D $$f /usr/local/lib/pilight/hardware/ || true && cd .. && cd ..; \
+	done	
 	install -m 0755 init/pilight.initd /etc/init.d/
 	mv /etc/init.d/pilight.initd /etc/init.d/pilight
 	update-rc.d pilight defaults
