Created 3 Rev protocols

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -261,13 +261,12 @@ if(${PROTOCOL_RELAY} MATCHES "OFF")
 endif()
 
 if(${PROTOCOL_REV} MATCHES "OFF")
-	list(REMOVE_ITEM protocol_header "${PROJECT_SOURCE_DIR}/libs/protocols/rev.h")
-	list(REMOVE_ITEM protocol "${PROJECT_SOURCE_DIR}/libs/protocols/rev.c")
-endif()
-
-if(${PROTOCOL_REV_OLD} MATCHES "OFF")
-	list(REMOVE_ITEM protocol_header "${PROJECT_SOURCE_DIR}/libs/protocols/rev_old.h")
-	list(REMOVE_ITEM protocol "${PROJECT_SOURCE_DIR}/libs/protocols/rev_old.c")
+	list(REMOVE_ITEM protocol_header "${PROJECT_SOURCE_DIR}/libs/protocols/rev_v1.h")
+	list(REMOVE_ITEM protocol_header "${PROJECT_SOURCE_DIR}/libs/protocols/rev_v2.h")
+	list(REMOVE_ITEM protocol_header "${PROJECT_SOURCE_DIR}/libs/protocols/rev_v3.h")
+	list(REMOVE_ITEM protocol "${PROJECT_SOURCE_DIR}/libs/protocols/rev_v1.c")
+	list(REMOVE_ITEM protocol "${PROJECT_SOURCE_DIR}/libs/protocols/rev_v2.c")
+	list(REMOVE_ITEM protocol "${PROJECT_SOURCE_DIR}/libs/protocols/rev_v3.c")
 endif()
 
 if(${PROTOCOL_CLARUS} MATCHES "OFF")
