Added option to turn on/off modular build

--- a/pilight.h.in
+++ b/pilight.h.in
@@ -26,6 +26,7 @@
 #cmakedefine WEBSERVER
 #cmakedefine UPDATE
 #cmakedefine FIRMWARE
+#cmakedefine MODULAR
 
 #define VERSION					"4.0"
 #define PULSE_DIV				34
