--- a/libs/hardware/Makefile
+++ b/libs/hardware/Makefile
@@ -19,12 +19,15 @@ ifneq (, $(findstring amd64, $(SYS)))
 endif
 CFLAGS = -ffast-math $(OSFLAGS) -fstack-protector-all -Wfloat-equal -Wshadow -Wpointer-arith -Wcast-align -Wstrict-overflow=5 -Wwrite-strings -Waggregate-return -Wcast-qual -Wswitch-default -Wswitch-enum -Wformat=2 -g -Wall -isystem. -isystem.. -I../pilight/
 SRC = $(wildcard *.c)
-OBJS = $(SRC:.c=.so)
+OBJS = $(SRC:.c=.o)
 
-all: $(OBJS)
+all: $(OBJS) hardware.o
 
-%.so: %.c %.h
-	$(GCC) $(CFLAGS) -shared $(patsubst %.so,%.c,$@) -o $@
+%.o: %.c %.h
+	$(GCC) $(CFLAGS) -c $(patsubst %.o,%.c,$@)
+
+hardware.o: $(OBJS)
+	$(CROSS_COMPILE)ld -L/usr/local/lib -r $(OBJS) -o hardware.o
 
 dist-clean: clean
 	
