Added CPU and Memory reporting / guarding
There are various reasons that can make pilight spike in CPU
resources. The prevent the system to become unresponsive,
pilight will now check its own CPU and memory usage.
If pilight is using > 75% CPU over 10 seconds, it
will gracefully close itself. If pilight reaches over 90% CPU
it will force exit itself. The same counts for memory usage.

When we know this information, it can also be used to create
more information about pilight itself. So an additional
built-in protocol has been created that communicates the
pilight CPU and Memory usage every 5 seconds.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -577,6 +577,7 @@ if(${MODULES} MATCHES "OFF")
 	target_link_libraries(pilight-daemon pilight_shared)
 	target_link_libraries(pilight-daemon ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-daemon m)
+	target_link_libraries(pilight-daemon rt)
 	target_link_libraries(pilight-daemon ${CMAKE_THREAD_LIBS_INIT})
 
 	if(${UPDATE} MATCHES "ON")
